# Dash-Desktop

./: .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml  rust.yml  webpack.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: AuthPage.tsx  Dashboard.tsx  FormattedOutput.tsx  LoadingPage.tsx  NetworkPanel.tsx  ThemeProvider.tsx
app/components/pages/: AuthPage.tsx  Dashboard.tsx  LoadingPage.tsx  NetworkPanel.tsx  ThemeProvider.tsx
app/components/ui/: CodeEditor.tsx  CubeLoader.tsx  DashCoinTransfer.tsx  DockerForm.tsx  LeftSideBar.tsx  TaskDetails.tsx  TaskListItem.tsx  TaskStatus.tsx
app/data/: data.ts
app/services/: auth.ts  chat.ts  firebase.ts  node.ts  task.ts
app/types/: types.ts
app/utils/: firebaseConfig.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
