[package]
name = "DASH"
version = "1.9.9"
description = "Distributed Adaptive Serverless Hosting"
authors = ["Adithya Krishnan", "Ferwin Lopez", "Nevia Sebastian", "Nikita Nair"]
license = "MIT License"
repository = "https://github.com/Chackoz/Dash-Desktop"
edition = "2021"
rust-version = "1.77.2"

[tauri]
windows = [
  # This option ensures no terminal appears when running the .exe
  { window = { hide_console = true } }
]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.1", features = [] }  
tauri-plugin-log = "2.0.0-rc"
tempfile = "3.14.0"
env_logger = "0.11.6"
uuid = { version = "1.4", features = ["v4"] }
sys-info = "0.9"
